[fix #78] 회원가입 입력 값 검증 오류 수정

--- a/services/user/build.gradle
+++ b/services/user/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
 	// MVC
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// Cloud
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
