[refactor #102] 결제 완료 후 좌석 상태 변경 카프카로 변환

--- a/services/performance/build.gradle
+++ b/services/performance/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 	implementation(project(':common:caching')) {
 		exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-data-redis')
 	}
+	implementation project(':common:messaging')
 	implementation project(':common:monitoring')
 
 	// MVC
