--- a/services/performance/src/main/resources/application.yml
+++ b/services/performance/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
       - "classpath:application-eureka.yml"
       - "classpath:application-jpa.yml"
       - "classpath:application-redis.yml"
+      - "classpath:application-kafka.yml"
       - "classpath:application-monitoring.yml"
 
 server:
