[fix #108] docker-compose 파일에 discord 웹훅 주소 추가

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -93,6 +93,7 @@ services:
       - PERFORMANCE_POSTGRES_URL=${PERFORMANCE_POSTGRES_URL}
       - PERFORMANCE_POSTGRES_USERNAME=${PERFORMANCE_POSTGRES_USERNAME}
       - PERFORMANCE_POSTGRES_PASSWORD=${PERFORMANCE_POSTGRES_PASSWORD}
+      - DISCORD_WEBHOOK_URL=${GF_DISCORD_WEBHOOK_URL}
       - REDIS_NODE_1=${REDIS_NODE_1}
       - REDIS_NODE_2=${REDIS_NODE_2}
       - REDIS_NODE_3=${REDIS_NODE_3}
