--- a/common/core/src/main/resources/application-eureka.yml
+++ b/common/core/src/main/resources/application-eureka.yml
@@ -2,3 +2,9 @@ eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER}
+
+spring:
+  cloud:
+    loadbalancer:
+      ribbon:
+        enabled: true
