[refactor #118] 서킷브레이커 TimeLimiter 설정 추가

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -33,6 +33,10 @@ token-value:
   secret-key: ${USER_TOKEN_SECRET_KEY}
 
 resilience4j:
+  timelimiter:
+    configs:
+      default:
+        timeout-duration: 10s
   circuitbreaker:
     configs:
       default:
