--- a/services/auth/build.gradle
+++ b/services/auth/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation project(':common:dtos')
 	implementation project(':common:caching')
 	implementation project(':common:monitoring')
+	implementation project(':common:circuit-breaker')
 
 	// MVC
 	implementation 'org.springframework.boot:spring-boot-starter-web'
