--- a/services/order/build.gradle
+++ b/services/order/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	implementation project(':common:rdb')
 	implementation project(':common:messaging')
 	implementation project(':common:monitoring')
+	implementation project(':common:circuit-breaker')
 
 	// MVC
 	implementation 'org.springframework.boot:spring-boot-starter-web'
