--- a/services/order/src/main/resources/application.yml
+++ b/services/order/src/main/resources/application.yml
@@ -14,6 +14,15 @@ spring:
       - "classpath:application-jpa.yml"
       - "classpath:application-kafka.yml"
       - "classpath:application-monitoring.yml"
+      - "classpath:application-circuit-breaker.yml"
 
 server:
   port: 10013
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      performanceServiceCircuitBreaker:
+        baseConfig: default
+      paymentServiceCircuitBreaker:
+        baseConfig: default
