--- a/services/auth/src/main/resources/application.yml
+++ b/services/auth/src/main/resources/application.yml
@@ -20,6 +20,11 @@ jwt:
     expiration: 604800000  # 7일
 
 resilience4j:
+  retry:
+    instances:
+      userServiceRetry:
+        baseConfig: default
+
   circuitbreaker:
     instances:
       userServiceCircuitBreaker:
