--- a/services/order/src/main/resources/application.yml
+++ b/services/order/src/main/resources/application.yml
@@ -20,6 +20,13 @@ server:
   port: 10013
 
 resilience4j:
+  retry:
+    instances:
+      performanceServiceRetry:
+        baseConfig: default
+      paymentServiceRetry:
+        baseConfig: default
+
   circuitbreaker:
     instances:
       performanceServiceCircuitBreaker:
