--- a/services/auth/build.gradle
+++ b/services/auth/build.gradle
@@ -39,9 +39,9 @@ dependencies {
 	implementation project(':common:dtos')
 	implementation project(':common:caching')
 	implementation project(':common:monitoring')
-	implementation project(':common:circuit-breaker')
+    implementation project(':common:resilience4j')
 
-	// MVC
+    // MVC
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
