[feat #132] 작업열 토큰 TTL 연장 API 구현

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -174,7 +174,8 @@ services:
       - ZIPKIN=${ZIPKIN}
       - USER_TOKEN_SECRET_KEY=${USER_TOKEN_SECRET_KEY}
       - WORKING_QUEUE_MAX_SIZE=${WORKING_QUEUE_MAX_SIZE}
-      - WORKING_QUEUE_TOKEN_TTL=${WORKING_QUEUE_TOKEN_TTL}
+      - INITIAL_WORKING_QUEUE_TOKEN_TTL=${INITIAL_WORKING_QUEUE_TOKEN_TTL}
+      - EXTENDED_WORKING_QUEUE_TOKEN_TTL=${EXTENDED_WORKING_QUEUE_TOKEN_TTL}
     depends_on:
       eureka-server:
         condition: service_started
